<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.detail.MoveUserDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ln_detail_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fav_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fav_list"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:shapeAppearanceOverlay="@style/Circular"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/layout_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/img_user"
        tools:layout_editor_absoluteX="-16dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="75dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintTop_toBottomOf="@+id/name_user"
        app:layout_constraintBottom_toTopOf="@+id/ly_main"
        tools:layout_editor_absoluteY="163dp" />
<LinearLayout
    android:id="@+id/ly_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:layout_constraintTop_toBottomOf="@+id/username"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <ImageView
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:src="@drawable/baseline_group_24"
        android:importantForAccessibility="no" />
    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers_fragment"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_group_24"
        android:importantForAccessibility="no" />
    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following_fragment"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/followers"
        app:layout_constraintTop_toBottomOf="@+id/username" />
</LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/ly_main"
        app:tabTextColor="@color/orange_agak_muda"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ivFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/orange_agak_muda"
        android:contentDescription="@string/favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>